[package]
name = "sider"
version = "0.5.0"
edition = "2021"
authors = ["Pierre-Henri Bourdeau <phbasic@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/bourdeau/sider/"
repository = "https://github.com/bourdeau/sider/"
license = "Apache-2.0"
publish = true

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
config = "0.15.7"
dirs = "6.0.0"
indexmap = "2.7.1"
once_cell = "1.20.3"
regex = "1.11.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures"] }

[[bench]]
name = "my_benchmark"
harness = false
